--- a/app/views/lists/index.html.erb
+++ b/app/views/lists/index.html.erb
@@ -1,9 +1,14 @@
-<h1>lists</h1>
+<h1>Movie Lists</h1>
 
 <ul>
   <% @lists.each do |list| %>
-  <li> <%= list.name %> </li>
+  <li> <%= link_to list.name, list_path(list) %> </li>
   <% end %>
 </ul>
 
+<h2>Add a list</h2>
 
+<%= simple_form_for(@list) do |f| %>
+  <%= f.input :name %>
+  <%= f.submit %>
+<% end %>
