--- a/app/views/lists/new.html.erb
+++ b/app/views/lists/new.html.erb
@@ -1,4 +1,8 @@
+<h2>Add a list</h2>
+
 <%= simple_form_for(@list) do |f| %>
   <%= f.input :name %>
   <%= f.submit %>
 <% end %>
+
+<%= link_to "List Index", lists_path %>
