--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -1,6 +1,6 @@
 .navbar-lewagon {
   justify-content: space-between;
-  background: white;
+  background: #292828;
   padding: 10px 5px ;
 }
 
@@ -10,8 +10,4 @@
 
 .navbar-lewagon .navbar-brand img {
   width: 40px;
-}
-
-.navbar-custom {
-  
 }
