--- a/app/views/lists/index.html.erb
+++ b/app/views/lists/index.html.erb
@@ -1,26 +1,19 @@
-<div class="navbar-lewagon d-flex align-items-center border-bottom border-2">
-  <div class="d-flex align-items-center ms-2">
-    <h1 class="me-2">MyCinema</h1>
-    <i class="fa-sharp fa-solid fa-film fa-2xl"></i>
-  </div>
-  <button type="button" class="btn btn-danger btn-custom me-2">My Lists</button>
-</div>
-
 <div class="banner">
 </div>
 
 <%# https://www.w3schools.com/howto/howto_css_image_overlay_title.asp %>
 <%# Add overlay that changes when hover %>
-<div class="container">
-  <div class="d-flex justify-content-center align-items-center flex-column">
-    <h2 class="pt-3">My Lists</h2>
-    <div class="row">
+<div class="container text-center">
+  <%# How to get grid items in center? %>
+  <div class="container text-center my-5">
+    <h2 class="pt-1 mb-4 text-white">My Movie Lists</h2>
+    <div class="row gy-5">
       <% @lists.each do |list| %>
         <div class="col-md-6">
           <div class="card" style="width: 18rem;">
             <img src="<%=list.image_url%>" class="card-img-top" alt="<%=list.name%>">
               <div class="card-body">
-                <p class="card-text"><%= link_to list.name, list_path(list) %></p>
+                <p class="card-text fs-5"><%= link_to list.name, list_path(list) %></p>
               </div>
           </div>
         </div>
@@ -29,15 +22,26 @@
   </div>
 
 
-  <h2>Create Movie List</h2>
+  <div class="d-flex flex-column align-items-center">
+    <h2 class="text-white">Create Movie List</h2>
 
-  <div class="form">
-  <%= simple_form_for(@list) do |f| %>
-    <%= f.input :name %>
-    <%= f.input :image_url %>
-    <%= f.submit %>
-  <% end %>
+    <div class="form text-black">
+    <%= simple_form_for(@list) do |f| %>
+      <%= f.input :name %>
+      <%= f.input :image_url %>
+      <%= f.submit %>
+    <% end %>
+    </div>
+
+    <%= link_to "See bookmarks", bookmarks_path%>
   </div>
-
-  <%= link_to "See bookmarks", bookmarks_path%>
 </div>
+
+
+<%# 1.  Get 'lists' grid in the center %>
+<%# 2. Override bootstrap, where and how %>
+<%# 3. Bookmarks links rendering with a '.' and not a '/'%>
+<%# 4. On bookmarks page, add a new bookmark with no pre-existing list %>
+<%# 5. How to add a class when using_link_to %>
+<%# 6. Show bookmark comment for a particular film %>
+<%# 7. Stimulus controllers %>
