--- a/app/assets/stylesheets/components/_link.scss
+++ b/app/assets/stylesheets/components/_link.scss
@@ -1,11 +1,12 @@
 a {
   text-decoration: none;
-}
-
-a .red {
   color: #FD0070;
 }
 
-a.white {
+button a {
   color: white;
+}
+
+button a:hover {
+  color: lightgrey;
 }
