--- a/app/views/lists/index.html.erb
+++ b/app/views/lists/index.html.erb
@@ -44,4 +44,6 @@
 <%# 4. On bookmarks page, add a new bookmark with no pre-existing list %>
 <%# 5. How to add a class when using_link_to %>
 <%# 6. Show bookmark comment for a particular film %>
-<%# 7. Stimulus controllers %>
+<%# 7. Stimulus controller "more" not connecting %>
+<%# 8. Why is my string not reading backwards from -1 %>
+<%# 9. Implement Reviews pathways  %>
