--- a/app/views/lists/show.html.erb
+++ b/app/views/lists/show.html.erb
@@ -1,32 +1,35 @@
 
 <div class="container">
   <h2>Movie List - <%= @list.name %></h2>
-  <ul class="list-group list-margin">
+
     <% @list.movies.each do |movie| %>
-      <li class="list-group-item">
-        <div class="card" style="width: 18rem;">
+
+        <div class="card" style="width: 20rem;">
           <img src="<%=movie.poster_url%>" class="card-img-top" alt="<%=movie.title%>">
-          <div class="card-body">
-            <h5 class="card-title"><b><%=movie.title%></b></h5>
-            <p class="card-text"><%= movie.overview[0, 60]...%></p>
+          <div class="card-body" data-controller="more">
+            <h5 class="card-title text-black"><b><%=movie.title%></b></h5>
+            <p class="card-text text-black"><%= movie.overview[0, movie.overview.length / 2] %><span id="dots">...</span><span id="more"><%= movie.overview[-1, 20]%></span></p>
+            <%= movie.overview[-1, 5] %>
             <a href="#" class="btn btn-primary">Read More</a>
           </div>
         </div>
-      </li>
-    <% end %>
-  </ul>
 
+    <% end %>
+
+
+  <div>
   <h3>Add New Bookmark</h3>
 
-  <div class="form text-black">
-    <%= simple_form_for [@list, @bookmark] do |f| %>
-      <%= f.input :comment %>
-      <%# f.association will get the movie_id %>
-      <%# this works because bookmark belongs_to movie %>
-      <%# takes movie_id along with it in params %>
-      <%= f.association :movie %>
-      <%= f.submit %>
-    <% end %>
+    <div class="form text-black">
+      <%= simple_form_for [@list, @bookmark] do |f| %>
+        <%= f.input :comment %>
+        <%# f.association will get the movie_id %>
+        <%# this works because bookmark belongs_to movie %>
+        <%# takes movie_id along with it in params %>
+        <%= f.association :movie %>
+        <%= f.submit %>
+      <% end %>
+    </div>
   </div>
 
 
