--- a/app/assets/stylesheets/components/_button.scss
+++ b/app/assets/stylesheets/components/_button.scss
@@ -1,10 +1,11 @@
-.btn-custom {
-  color: white;
+
+.btn {
+  background-color: #FD0070;
   border-radius: 5px;
   font-weight: 500;
 }
 
-.btn-custom:hover {
-  font-weight: 800;
-  color: white;
+.btn:hover {
+  font-weight: 600;
+  background-color: #FD0070;
 }
