--- a/app/assets/stylesheets/components/_button.scss
+++ b/app/assets/stylesheets/components/_button.scss
@@ -1,11 +1,14 @@
 
 .btn {
-  background-color: #FD0070;
+  background-color: #FD0150;
   border-radius: 5px;
-  font-weight: 500;
+  font-weight: 400;
 }
 
 .btn:hover {
-  font-weight: 600;
-  background-color: #FD0070;
+  background-color: #FD0150;
+}
+
+#more {
+  display: none;
 }
