--- a/app/views/lists/show.html.erb
+++ b/app/views/lists/show.html.erb
@@ -1,20 +1,40 @@
-
 <div class="container">
   <h2>Movie List - <%= @list.name %></h2>
 
     <% @list.movies.each do |movie| %>
 
-        <div class="card" style="width: 20rem;">
-          <img src="<%=movie.poster_url%>" class="card-img-top" alt="<%=movie.title%>">
-          <div class="card-body" data-controller="more">
-            <h5 class="card-title text-black"><b><%=movie.title%></b></h5>
-            <p class="card-text text-black"><%= movie.overview[0, movie.overview.length / 2] %><span id="dots">...</span><span id="more"><%= movie.overview[-1, 20]%></span></p>
-            <%= movie.overview[-1, 5] %>
-            <a href="#" class="btn btn-primary">Read More</a>
-          </div>
-        </div>
+  <% overview_string = movie.overview.split %>
+  <% overview_string.length / 2 %>
+  <% new_string = overview_string.each_slice((overview_string.size / 2.0).round).to_a%>
+  <% first_half = new_string[0].join(' ') %>
+  <% second_half = new_string[1].join(' ') %>
 
-    <% end %>
+    <div class="card" data-controller="more" style="width: 20rem;">
+      <img src="<%=movie.poster_url%>" class="card-img-top" alt="<%=movie.title%>">
+        <div class="card-body">
+            <h5 class="card-title text-black"><b><%=movie.title%></b></h5>
+            <p class="card-text text-black"><%= first_half %>
+              <span id="dots" data-more-target="dots">...</span>
+              <span id="more" data-more-target="span"><%= second_half%></span>
+            </p>
+          <a href="#" data-action="click->more#readMore"
+          data-more-target="button" class="btn btn-primary">Read More</a>
+        </div>
+    </div>
+  <% end %>
+
+<h2>Reviews!</h2>
+<ul>
+
+  <% @reviews.each do |review| %>
+   <li> <%= review.comment %>
+    Rating: <%= review.rating %>
+    </li>
+  <% end %>
+</ul>
+
+
+
 
 
   <div>
