--- a/app/views/lists/index.html.erb
+++ b/app/views/lists/index.html.erb
@@ -6,7 +6,8 @@
 <div class="container text-center">
   <%# How to get grid items in center? %>
   <div class="container text-center my-5">
-    <h2 class="pt-1 mb-4 text-white">My Movie Lists</h2>
+    <h2 class="pt-1 mb-4 text-white">
+      <span data-controller="typed-js"></span></h2>
     <div class="row gy-5">
       <% @lists.each do |list| %>
         <div class="col-lg-6 d-flex justify-content-center">
@@ -44,4 +45,7 @@
 <%# 3. Bookmarks links rendering with a '.' and not a '/'%>
 <%# 4. On bookmarks page, add a new bookmark with no pre-existing list %>
 <%# 5. How to add a class when using_link_to %>
-<%# 9. Implement Reviews pathways  %>
+<%# Searh for movies %>
+<%# Add montserrat font %>
+<%# animate on scroll %>
+<%# tom select %>
