--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,13 +14,19 @@
 
   <body class="background-colour text-white">
     <div class="navbar-lewagon d-flex align-items-center border-bottom border-2">
-    <div class="d-flex align-items-center ms-2">
-      <h1 class="me-2 text-white">MyCinema</h1>
-      <i class="fa-sharp fa-solid fa-film fa-2xl text-white"></i>
+      <div class="d-flex align-items-center ms-2">
+        <h1 class="me-2 text-white"><%= link_to "MyCinema", root_path %></h1>
+        <i class="fa-sharp fa-solid fa-film fa-2xl text-white"></i>
+      </div>
+      <div class="d-flex justify-content-between align-items-center">
+        <form class="me-3" action="/" method="get">
+          <input type="text" name="search" value="<%= params[:search] %>">
+          <input class="px-2 py-2" type="submit">
+        </form>
+        <button type="button" class="btn btn-warning me-2 p-2">
+          <a class="red" href="<%= bookmarks_path %>">Bookmarks</a>
+        </button>
     </div>
-    <button type="button" class="btn btn-warning me-2 p-2">
-      <a class="red" href="<%= bookmarks_path %>">Bookmarks</a>
-    </button>
   </div>
     <%= yield %>
   </body>
