--- a/app/views/lists/show.html.erb
+++ b/app/views/lists/show.html.erb
@@ -1,44 +1,76 @@
 <div class="container">
-  <h2>Movie List - <%= @list.name %></h2>
+  <h2 class="my-3 text-center">Movie List - <%= @list.name %></h2>
 
-  <% @list.movies.each do |movie| %>
-    <div class="card" data-controller="more" style="width: 30rem;">
-      <img src="<%=movie.poster_url%>" class="card-img-top" alt="<%=movie.title%>">
-        <div class="card-body">
-            <h5 class="card-title text-black"><b><%=movie.title%></b></h5>
-            <p class="card-text text-black"><%= string_half(movie.overview)[0] %>
-              <span id="dots" data-more-target="dots">...</span>
-              <span id="more" data-more-target="span"><%= string_half(movie.overview)[1]%></span>
-            </p>
-          <a href="#" data-action="click->more#readMore"
-          data-more-target="button" class="btn btn-primary">Read More</a>
+  <div class="container">
+    <div class="row">
+      <% @list.movies.each do |movie| %>
+        <div class="col">
+        <div class="card" data-controller="more" style="width: 30rem;">
+          <img src="<%=movie.poster_url%>" class="card-img-top" alt="<%=movie.title%>">
+            <div class="card-body">
+                <h5 class="card-title text-black"><b><%=movie.title%></b></h5>
+                <p class="card-text text-black"><%= string_half(movie.overview)[0] %>
+                  <span id="dots" data-more-target="dots">...</span>
+                  <span id="more" data-more-target="span"><%= string_half(movie.overview)[1]%></span>
+                </p>
+              <a href="#" data-action="click->more#readMore"
+              data-more-target="button" class="btn btn-primary">Read More</a>
+            </div>
+
+            <ul class="list-inline">
+              <% movie.bookmarks.each do |bookmark|%>
+                <li class="text-black list-inline-item ms-3">
+                  <div class="d-flex justify-content-start">
+                    <i class="fa-solid fa-xl fa-quote-left me-2 pt-1"></i>
+                    <p>"<%= bookmark.comment %>"</p>
+                  </div>
+                  <p><%= link_to "Delete bookmark", bookmark_path(bookmark),
+                  data: { turbo_method: :delete, turbo_confirm: "Are you sure?"}  %></p>
+                </li>
+              <% end %>
+            </ul>
         </div>
-        <ul>
-        <% movie.bookmarks.each do |bookmark|%>
-        <li class="text-black"><i class="fa-solid fa-xl fa-quote-left"></i>
-          <p>"<%= bookmark.comment %>"</p>
-          <p><%= link_to "Delete bookmark", bookmark_path(bookmark),
-              data: { turbo_method: :delete, turbo_confirm: "Are you sure?"}  %></p></li>
+        </div>
+      <% end %>
+    </div>
+  </div>
+
+<hr class="my-5">
+
+<div>
+  <h2 class="mb-3">List Reviews</h2></div>
+  <div class="d-flex justify-content-between align-items-center">
+
+<%# If/else to determine what's written if no movies.. %>
+    <div class="w-75">
+      <% @list.reviews.each do |review| %>
+        <% if @list.reviews %>
+          <div class="border mb-3 w-75">
+            <h4 class="bg-light p-2 text-black"><b>Rating:</b> <%= review.rating %></h4>
+            <p class="p-2"><%= review.comment %></p>
+          </div>
+        <% else %>
+          <p class="p-2 text-white"> No reviews yet!</p>
         <% end %>
-        </ul>
+      <% end %>
     </div>
-  <% end %>
 
-<hr>
-<h2 class="mb-3">List Reviews</h2>
+      <div>
+      <h4 class="mb-3">Add Review...</h4>
+        <div class="form text-black">
+          <%= simple_form_for [@list, @review] do |f| %>
+            <%= f.input :comment %>
+            <%= f.input :rating, collection: (1..5).to_a, label: "Rate this list", input_html: {data: {controller: "star-rating"}} %>
+            <%= f.submit %>
+          <% end %>
+        </div>
+      </div>
+  </div>
 
-  <% @list.reviews.each do |review| %>
-    <div class="border mb-3 w-75">
-      <h4 class="border p-2"><b>Rating:</b> <%= review.rating %></h4>
-      <p class="border p-2"><%= review.comment %></p>
-    </div>
-  <% end %>
 
-
-
-<hr>
-  <div>
-  <h3>Add New Bookmark</h3>
+<hr class="my-5">
+  <div >
+  <h3>Add Bookmark To This List</h3>
 
     <div class="form text-black">
       <%= simple_form_for [@list, @bookmark] do |f| %>
