--- a/app/views/lists/index.html.erb
+++ b/app/views/lists/index.html.erb
@@ -42,10 +42,10 @@
 </div>
 
 <%# 3. Bookmarks links rendering with a '.' and not a '/'%>
-<%# On show page, when review is empty, why is my else not showing up? %>
 <%# Search for movies, how to ignore case sensitivity %>
+  <%# use ILIKE instead of LIKE %>
+<%# Add montserrat font - what file would I add it to? %>
 <%# 4. On bookmarks page, add a new bookmark with no pre-existing list %>
 <%# 5. How to add a class when using_link_to %>
-<%# Add montserrat font %>
 <%# animate on scroll %>
 <%# tom select %>
