--- a/app/views/lists/index.html.erb
+++ b/app/views/lists/index.html.erb
@@ -4,10 +4,9 @@
 <%# https://www.w3schools.com/howto/howto_css_image_overlay_title.asp %>
 <%# Add overlay that changes when hover %>
 <div class="container text-center">
-  <%# How to get grid items in center? %>
   <div class="container text-center my-5">
     <h2 class="pt-1 mb-4 text-white">
-      <span data-controller="typed-js"></span></h2>
+      <span data-controller="typed-js" id="typed-js"></span></h2>
     <div class="row gy-5">
       <% @lists.each do |list| %>
         <div class="col-lg-6 d-flex justify-content-center">
@@ -16,7 +15,7 @@
               <img src="<%=list.image_url%>" class="card-img-top" alt="<%=list.name%>">
               <div class="overlay position-absolute"></div>
             </div>
-              <div class="card-body">
+              <div class="card-body" style="background-color: rgba(253, 1, 80, 0.8)">
                 <p class="card-text fs-5"><%= link_to list.name, list_path(list) %></p>
               </div>
           </div>
@@ -41,11 +40,17 @@
   </div>
 </div>
 
-<%# 3. Bookmarks links rendering with a '.' and not a '/'%>
 <%# Search for movies, how to ignore case sensitivity %>
   <%# use ILIKE instead of LIKE %>
+
 <%# Add montserrat font - what file would I add it to? %>
+  <%# I added it to pages/_home, and the font to application.scss %>
+
 <%# 4. On bookmarks page, add a new bookmark with no pre-existing list %>
+
 <%# 5. How to add a class when using_link_to %>
+
 <%# animate on scroll %>
 <%# tom select %>
+
+<%# style a simple form %>
