--- a/app/views/bookmarks/index.html.erb
+++ b/app/views/bookmarks/index.html.erb
@@ -14,7 +14,7 @@
               <h5 class="card-title text-black"><%= bookmark.movie.title %></h5>
               <p class="card-text text-black"><b>Comment:</b> <%= bookmark.comment %></p>
               <%# Why is the link coming out as '.' %>
-              <p class="card-text"><small class="text-muted">List: <%= link_to bookmark.list.name, lists_path(bookmark.list_id) %></small></p>
+              <p class="card-text"><small class="text-muted">List: <%= link_to bookmark.list.name, list_path(bookmark.list_id) %></small></p>
               <p><%= link_to "Delete bookmark", bookmark_path(bookmark),
               data: { turbo_method: :delete, turbo_confirm: "Are you sure?"}  %></p>
             </div>
@@ -25,7 +25,7 @@
   </ul>
 
   <%# How to add bookmark on it's own page, not associated to a list %>
-  
+
   <%= simple_form_for @bookmark do |f| %>
     <%= f.input :comment %>
     <%# f.association will get the movie_id %>
