--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>RailsWatchList</title>
+    <title>MyCinema</title>
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
@@ -20,7 +20,7 @@
       </div>
       <div class="d-flex justify-content-between align-items-center">
         <form class="me-3" action="/" method="get">
-          <input type="text" name="search" value="<%= params[:search] %>">
+          <input type="text" class="py-2 me-2 rounded-1" name="search" value="<%= params[:search] %>">
           <input class="px-2 py-2" type="submit">
         </form>
         <button type="button" class="btn btn-warning me-2 p-2">
