--- a/app/views/lists/index.html.erb
+++ b/app/views/lists/index.html.erb
@@ -38,6 +38,9 @@
     </div>
 
   </div>
+
+  <%= cl_image_tag("shawshank_lkytck",
+      width: 400, height: 300, crop: :fill) %>
 </div>
 
 <%# Search for movies, how to ignore case sensitivity %>
