--- a/app/views/lists/index.html.erb
+++ b/app/views/lists/index.html.erb
@@ -39,7 +39,7 @@
 
   </div>
 
-  <%= cl_image_tag("shawshank_lkytck",
+  <%= cl_image_tag("cld-sample-5",
       width: 400, height: 300, crop: :fill) %>
 </div>
 
