testing changing the image.key

--- a/app/views/lists/index.html.erb
+++ b/app/views/lists/index.html.erb
@@ -55,7 +55,7 @@
 <%# 4. On bookmarks page, add a new bookmark with no pre-existing list %>
 
 <%# 5. How to add a class when using_link_to or img_tag%>
-<%# cl_image_tag @list.photo.key, crop: :fill, class: "border" %>
+  <%# cl_image_tag @list.photo.key, crop: :fill, class: "border" %>
 
 <%# animate on scroll %>
 <%# tom select %>
@@ -63,5 +63,7 @@
 <%# style a simple form %>
 
 <%# Seeding images section makes no sense https://kitt.lewagon.com/camps/963/lectures/05-Rails%2F05-Rails-MC-with-images#source%>
+<%# How do you DIRECTLY add an image to a movie with rails console? (either from cloudinary or the web)%>
+<%# cannot manipulate @movie.photo.key %>
 
 <%# Why getting variable size cards? %>
