--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,21 +13,9 @@
   </head>
 
   <body class="background-colour text-white">
-    <div class="navbar-lewagon d-flex align-items-center border-bottom border-2">
-      <div class="d-flex align-items-center ms-2">
-        <h1 class="me-2 text-white"><%= link_to "MyCinema", root_path %></h1>
-        <i class="fa-sharp fa-solid fa-film fa-2xl text-white"></i>
-      </div>
-      <div class="d-flex justify-content-between align-items-center">
-        <form class="me-3" action="/" method="get">
-          <input type="text" class="py-2 me-2 rounded-1" name="search" value="<%= params[:search] %>">
-          <input class="px-2 py-2" type="submit">
-        </form>
-        <button type="button" class="btn btn-warning me-2 p-2">
-          <a class="red" href="<%= bookmarks_path %>">Bookmarks</a>
-        </button>
-    </div>
-  </div>
+    <%= render 'shared/navbar' %>
     <%= yield %>
+    <p class="notice"><%= notice %></p>
+    <p class="alert"><%= alert %></p>
   </body>
 </html>
