--- a/app/views/lists/index.html.erb
+++ b/app/views/lists/index.html.erb
@@ -5,6 +5,9 @@
 <%# Add overlay that changes when hover %>
 <div class="container text-center">
   <div class="container text-center my-5">
+  <% if user_signed_in? %>
+    <p>Welcome <%= current_user.email %></p>
+  <% end %>
     <h2 class="pt-1 mb-4 text-white">
       <span data-controller="typed-js" id="typed-js"></span></h2>
     <div class="row gy-5">
@@ -67,3 +70,11 @@
 <%# cannot manipulate @movie.photo.key %>
 
 <%# Why getting variable size cards? %>
+
+<%# delete bookmarks %>
+<%# make movie child of list %>
+
+<%# added username column to user via migration%>
+<%# edited sign up and edit forms %>
+<%# updated controller with configure permitted paramters %>
+<%# broke my code! %>
