--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -1,6 +1,6 @@
 <div class="navbar-lewagon d-flex align-items-center border-bottom border-2">
   <div class="d-flex align-items-center ms-2">
-    <h1 class="me-2 text-white"><%= link_to "MyCinema", root_path %></h1>
+    <h1 id="header-text" class="me-2 text-white"><%= link_to "MyCinema", root_path %></h1>
       <i class="fa-sharp fa-solid fa-film fa-2xl text-white"></i>
   </div>
   <div class="d-flex justify-content-between align-items-center">
