--- a/app/assets/stylesheets/components/_overlay.scss
+++ b/app/assets/stylesheets/components/_overlay.scss
@@ -1,17 +1,17 @@
 .overlay {
   bottom: 0;
+  left: 0;
   background: rgb(0, 0, 0);
   background: rgba(0, 0, 0, 0.5); /* Black see-through */
   color: #f1f1f1;
-  width: 100%;
+  width: 400px;
   height: 100%;
   transition: .5s ease;
-  opacity:0;
+  opacity: 1;
   font-size: 20px;
-
-
 }
 
 .design:hover .overlay {
-  opacity: 1;
+  opacity: 0;
+  width: 100%;
 }
