--- a/app/views/lists/index.html.erb
+++ b/app/views/lists/index.html.erb
@@ -1,6 +1,12 @@
 <div class="banner">
 </div>
 
+<div style="width: 100%; height: 600px;"
+  data-controller="map"
+  data-map-markers-value="<%= @markers.to_json %>"
+  data-map-api-key-value="<%= ENV['MAPBOX_API_KEY'] %>">
+</div>
+
 <div class="d-flex flex-column align-items-center justify-content-center py-5">
 
   <h1 CLASS="mb-5">YOUR LISTS</h3>
@@ -8,13 +14,13 @@
     <% @lists.each do |list| %>
       <div class="grid-card">
         <div style="width: 18rem;">
-          <div class=" design position-relative">
+          <div class="design position-relative">
           <%# if statement for cloudinary image tag %>
-            <% if list.photo.attached? == true %>
-              <%= cl_image_tag list.photo.key, :width=>400, :height=>350, :crop=>"fill", alt: list.name %>
-            <% else %>
-              <img src="<%=list.image_url%>", width="400", height="350", alt="<%=list.name%>">
-            <% end %>
+            <%# <% if list.photo.attached? == true %>
+              <%# <%= cl_image_tag list.photo.key, :width=>400, :height=>350, :crop=>"fill", alt: list.name %> %>
+            <%# <% else %> %>
+              <%# <img src="<%=list.image_url%>", width="400", height="350", alt="<%=list.name%>"> %>
+            <%# <% end %> %> %>
             <div class="overlay position-absolute"></div>
           </div>
 
@@ -35,12 +41,19 @@
     <div class="form text-black">
       <%= simple_form_for(@list) do |f| %>
         <%= f.input :name %>
-        <%= f.input :photo, as: :file %>
+        <%= f.input :photos, as: :file, input_html: { multiple: true } %>
         <%= f.submit %>
       <% end %>
     </div>
 
   </div>
+
+<% @lists.each do |list| %>
+  <%= list.photos[0] %>
+  <% list.photos.each do |photo| %>
+    <%= cl_image_tag photo.key, height: 300, width: 400, crop: :fill %>
+  <% end %>
+<% end %>
 
 
 <%# Search for movies, how to ignore case sensitivity %>
@@ -63,7 +76,6 @@
 <%# How do you DIRECTLY add an image to a movie with rails console? (either from cloudinary or the web)%>
 <%# cannot manipulate @movie.photo.key %>
 
-<%# Why getting variable size cards? %>
 
 <%# delete bookmarks %>
 <%# make movie child of list %>
